.metadata/.plugins/org.eclipse.cdt.ui/SingleMotorTest.build.log
03:02:30 **** Incremental Build of configuration Debug for project SingleMotorTest ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/MY36GP_3650.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/MY36GP_3650.d" -MT"Core/Src/MY36GP_3650.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/MY36GP_3650.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:146:7: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  146 |       printf("adc value : %d\tvoltage : %f\tccr : %d\t", u32_adc_value, f_voltage, u32_ccr_value);
      |       ^~~~~~
../Core/Src/main.c:146:7: warning: incompatible implicit declaration of built-in function 'printf'
../Core/Src/main.c:30:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   29 | #include "MY36GP_3650.h"
  +++ |+#include <stdio.h>
   30 | 
../Core/Src/main.c:146:28: warning: format '%d' expects argument of type 'int', but argument 2 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  146 |       printf("adc value : %d\tvoltage : %f\tccr : %d\t", u32_adc_value, f_voltage, u32_ccr_value);
      |                           ~^                             ~~~~~~~~~~~~~
      |                            |                             |
      |                            int                           uint32_t {aka long unsigned int}
      |                           %ld
../Core/Src/main.c:146:52: warning: format '%d' expects argument of type 'int', but argument 4 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  146 |       printf("adc value : %d\tvoltage : %f\tccr : %d\t", u32_adc_value, f_voltage, u32_ccr_value);
      |                                                   ~^                               ~~~~~~~~~~~~~
      |                                                    |                               |
      |                                                    int                             uint32_t {aka long unsigned int}
      |                                                   %ld
../Core/Src/MY36GP_3650.c: In function 'FL_SetDir':
../Core/Src/MY36GP_3650.c:46:33: error: 'FL_DIR_PNI' undeclared (first use in this function); did you mean 'FL_DIR_PIN'?
   46 |  HAL_GPIO_WritePin(FL_DIR_PORT, FL_DIR_PNI, dir);
      |                                 ^~~~~~~~~~
      |                                 FL_DIR_PIN
../Core/Src/MY36GP_3650.c:46:33: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:49: Core/Src/MY36GP_3650.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

03:02:30 Build Failed. 3 errors, 4 warnings. (took 265ms)

